WP-8364 fixed the title font size and alignment.

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -96,7 +96,7 @@
   position: relative;
   z-index: 6;
 }
-.node-type-voices fieldset.group-voices-group .job-title {
+.node-type-voices fieldset.group-voices-group .field-name-field-title-position-single {
   font-size: 22px;
   padding-top: 30px;
 }
